--- a/Project_Animagus/Config/DefaultEngine.ini
+++ b/Project_Animagus/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/WorkFolder/Levels/Lobby.Lobby
+EditorStartupMap=/Game/WorkFolder/Levels/Lobby.Lobby
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
