프로젝트 설정 로그

--- a/Project_Animagus/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Project_Animagus/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1292,6 +1292,8 @@ NewLevelDialog.TimeStamp=2024.10.10-04.30.16
 NewLevelDialog.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.10.10-04.30.14
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+MaterialEditor.TimeStamp=2024.10.10-04.30.16
+MaterialEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
