game instance, battle game mode 생성 및 BP_캐릭터, 컨트롤러 설정

--- a/Project_Animagus/Config/DefaultEngine.ini
+++ b/Project_Animagus/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/WorkFolder/Levels/Lobby.Lobby
-EditorStartupMap=/Game/WorkFolder/Levels/Lobby.Lobby
+GameDefaultMap=/Game/WorkFolder/Levels/InGameBattle.InGameBattle
+EditorStartupMap=/Game/WorkFolder/Levels/InGameBattle.InGameBattle
+GameInstanceClass=/Script/Project_Animagus.MyGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
