애니메이션, 입력 수정

--- a/Project_Animagus/Config/DefaultEngine.ini
+++ b/Project_Animagus/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/WorkFolder/Levels/InGameBattle.InGameBattle
-EditorStartupMap=/Game/WorkFolder/Levels/InGameBattle.InGameBattle
+GameDefaultMap=/Game/WorkFolder/Levels/L_Map.L_Map
+EditorStartupMap=/Game/WorkFolder/Levels/L_Map.L_Map
 GameInstanceClass=/Script/Project_Animagus.MyGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
