--- a/Project_Animagus/Server/Server/Server.vcxproj.filters
+++ b/Project_Animagus/Server/Server/Server.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="SocketUtils.cpp">
       <Filter>Network</Filter>
     </ClCompile>
+    <ClCompile Include="Listener.cpp">
+      <Filter>Network</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -60,6 +63,9 @@
       <Filter>Network</Filter>
     </ClInclude>
     <ClInclude Include="SocketUtils.h">
+      <Filter>Network</Filter>
+    </ClInclude>
+    <ClInclude Include="Listener.h">
       <Filter>Network</Filter>
     </ClInclude>
   </ItemGroup>
