SendBuffer 직접 정의, PacketHandler 정의

--- a/Project_Animagus/Server/Server/Server.vcxproj
+++ b/Project_Animagus/Server/Server/Server.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="Listener.cpp" />
     <ClCompile Include="pch.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="SendBuffer.cpp" />
     <ClCompile Include="ServerMain.cpp" />
     <ClCompile Include="ServerPacketHandler.cpp" />
     <ClCompile Include="Session.cpp" />
@@ -150,6 +151,8 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="protocol.h" />
+    <ClInclude Include="SendBuffer.h" />
+    <ClInclude Include="ServerPacketHandler.h" />
     <ClInclude Include="Session.h" />
     <ClInclude Include="SocketUtils.h" />
     <ClInclude Include="Types.h" />
