--- a/Project_Animagus/Server/Server/Server.vcxproj.filters
+++ b/Project_Animagus/Server/Server/Server.vcxproj.filters
@@ -15,9 +15,6 @@
     <ClCompile Include="ServerMain.cpp">
       <Filter>ServerMain</Filter>
     </ClCompile>
-    <ClCompile Include="ServerPacketHandler.cpp">
-      <Filter>ServerMain</Filter>
-    </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>Utils</Filter>
     </ClCompile>
@@ -42,6 +39,10 @@
     <ClCompile Include="Player.cpp">
       <Filter>ServerMain</Filter>
     </ClCompile>
+    <ClCompile Include="SendBuffer.cpp">
+      <Filter>Network</Filter>
+    </ClCompile>
+    <ClCompile Include="ServerPacketHandler.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -74,5 +75,9 @@
     <ClInclude Include="Player.h">
       <Filter>ServerMain</Filter>
     </ClInclude>
+    <ClInclude Include="SendBuffer.h">
+      <Filter>Network</Filter>
+    </ClInclude>
+    <ClInclude Include="ServerPacketHandler.h" />
   </ItemGroup>
 </Project>
