패킷 직렬화, 역직렬화

--- a/Project_Animagus/Server/DummyClient/DummyClient.vcxproj
+++ b/Project_Animagus/Server/DummyClient/DummyClient.vcxproj
@@ -127,12 +127,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Buffers.h" />
+    <ClInclude Include="ClientPacketHandler.h" />
     <ClInclude Include="ClientService.h" />
+    <ClInclude Include="IOCPCore.h" />
+    <ClInclude Include="IocpEvent.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="protocol.h" />
+    <ClInclude Include="Session.h" />
+    <ClInclude Include="SocketUtils.h" />
+    <ClInclude Include="Types.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Buffers.cpp" />
     <ClCompile Include="ClientMain.cpp" />
+    <ClCompile Include="ClientPacketHandler.cpp" />
     <ClCompile Include="ClientService.cpp" />
+    <ClCompile Include="IocpCore.cpp" />
+    <ClCompile Include="IocpEvent.cpp" />
+    <ClCompile Include="pch.cpp" />
+    <ClCompile Include="Session.cpp" />
+    <ClCompile Include="SocketUtils.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
