--- a/Project_Animagus/Config/DefaultEngine.ini
+++ b/Project_Animagus/Config/DefaultEngine.ini
@@ -162,3 +162,6 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 +CollisionChannelRedirects=(OldName="Skill",NewName="MyProjectile")
 
+[/Script/NavigationSystem.RecastNavMesh]
+bDrawPolyEdges=False
+
